# sprint-management-system

./: claude_output.md  history.json  main.py
backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20240101_0001_initial_schema.py
backend/app/: __init__.py
backend/app/api/: __init__.py  dependencies.py  exception_handlers.py  lifespan.py  main.py  security.py
backend/app/api/middleware/: __init__.py  authentication.py  request_context.py
backend/app/api/routers/: __init__.py  auth.py  auth_sessions.py  business_outcomes.py  health.py  kpis.py  organizations.py  projects.py  sprints.py  teams.py  users.py  work_items.py
backend/app/api/schemas/: __init__.py  common.py
backend/app/application/: __init__.py  context.py  mappers.py
backend/app/application/dtos/: __init__.py  attribution.py  auth.py  auth_extended.py  business_outcome_extensions.py  common.py  kpi.py  kpi_extensions.py  notification.py  okr.py  organization.py  outcome.py  project.py  sprint.py  user.py  work_item.py  work_item_extensions.py
backend/app/application/services/: __init__.py  audit_service.py  authentication_service.py  notification_service.py
backend/app/application/use_cases/: base.py
backend/app/application/validators/: __init__.py  (+3 more)
backend/app/core/: config.py  container.py  exceptions.py  logging.py  security.py
backend/app/domain/: __init__.py  enums.py  value_objects.py
backend/app/infrastructure/: __init__.py  seed.py
backend/scripts/: __init__.py  seed.py
(+289 files in other folders)
